# SphericalHarmonics

./: README.md
MersenneTwister/: Makefile.in  configure  configure.ac  configure.scan
MersenneTwister/src/: Makefile.am  Makefile.in  MersenneTwister.c  MersenneTwister.h
SphericalHarmonics/: Info.plist  REQUIREMENT.txt  SphericalHarmonicsDoc.h  SphericalHarmonicsDoc.m  SphericalHarmonics_Prefix.pch  main.m
SphericalHarmonics/Documents/: SphericalHarmonics.ai
SphericalHarmonics/English.lproj/: Credits.rtf  InfoPlist.strings
SphericalHarmonics/English.lproj/SphericalHarmonicsDoc~.nib/: keyedobjects.nib
SphericalHarmonics/Icons/: grace_probe.psd  sh-app-icon-base-2.psd  sh-app-icon-base.psd  sh-app-icon.icns  sh-app-icon.psd
SphericalHarmonics/SphericalHarmonics.xcode/: kanaya.pbxuser  project.pbxproj
SphericalHarmonics/SphericalHarmonics.xcodeproj/: kanaya.mode2  kanaya.pbxuser  project.pbxproj
SphericalHarmonics/SphericalHarmonics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SphericalHarmonics/SphericalHarmonics.xcodeproj/project.xcworkspace/xcuserdata/kanaya.xcuserdatad/: UserInterfaceState.xcuserstate
SphericalHarmonics/SphericalHarmonics.xcodeproj/xcuserdata/kanaya.xcuserdatad/xcschemes/: SphericalHarmonics.xcscheme  xcschememanagement.plist
SphericalHarmonicsCore/: SphericalHarmonicsCore.c  SphericalHarmonicsCore.h  configure  configure.ac  configure.scan
SphericalHarmonicsCore/src/: Makefile.am  Makefile.in  SphericalHarmonicsCore.c
